# Biscuit-Code

./: .gitignore  BISCUITS.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
biscuit-browser/: .gitignore  .npmrc  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
biscuit-browser/docs/: GOOD_FIRST_ISSUES.md  README.md  ROADMAP.md  THREAT_MODEL.md
biscuit-browser/extension/: README.md  background.js  content.js  gate.js  llm.js  manifest.json  options.html  options.js  sidepanel.html  sidepanel.js
biscuit-browser/src/main/: app.ts  index.ts  log.ts  tabs.ts  welcome.ts
biscuit-browser/src/preload/: index.ts
biscuit-browser/src/renderer/: index.html
biscuit-browser/test/: actionGate.test.ts  browserActions.test.ts  extractor.test.ts  llmJson.test.ts  mcpAuth.test.ts  runtime.test.ts  settingsStore.test.ts  taskContract.test.ts  url.test.ts  verify.test.ts
evals/cases/: basic.json
skills/format-converter/: SKILL.md
skills/rust-debugger/: SKILL.md
skills/skill-builder/: SKILL.md
src/: activity.rs  agent.rs  browser.rs  computer_use.rs  contract.rs  evals.rs  goals.rs  gui.rs  hooks.rs  input.rs  lib.rs  llm.rs  markdown.rs  mcp.rs  memory.rs  observations.rs  permissions.rs  shell.rs  skills.rs  statusbar.rs  test_harness.rs  tools.rs  ui.rs
(+36 files in other folders)
