[package]
name = "biscuits"
version = "0.1.0"
edition = "2021"
autobins = false
default-run = "biscuits"
description = "A lightweight, customizable terminal AI agent that works from any folder."

[[bin]]
name = "biscuits"
path = "src/bin/biscuits.rs"

[[bin]]
name = "biscuit"
path = "src/bin/biscuit.rs"

[dependencies]
anyhow = "1"
crossterm = "0.29"
dirs = "6"
futures-util = "0.3"
glob = "0.3"
libc = "0.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
urlencoding = "2"
